<resources>
    <string name="app_name">AI智投</string>
    <string name="sscf">盛世创富</string>
    <string name="name">名称</string>
    <string name="hint">提示</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="select_all">全选</string>
    <string name="delete">删除</string>
    <string name="delete_count">删除(%s)</string>
    <string name="import_stock">导入</string>
    <string name="import_stock_count">导入(%s)</string>
    <string name="finish">完成</string>
    <string name="clear_all">清除</string>
    <string name="close_button">关闭</string>
    <string name="known">知道了</string>
    <string name="duplicate">复制</string>
    <string name="quit">放弃</string>
    <string name="save">保存</string>
    <string name="word">字</string>
    <string name="more">更多</string>
    <string name="more_2">"更多 >"</string>
    <string name="commit">提交</string>
    <string name="more_detail">了解详情</string>
    <string name="message_center">消息中心</string>
    <string name="event">动态</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="my_friends">我的好友</string>
    <string name="ta_friends">TA的好友</string>
    <string name="attend">+关注</string>
    <string name="attended">已关注</string>
    <string name="secrecy">保密</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="reply_to">回复你：%s</string>
    <string name="blank_content">暂无内容</string>
    <string name="dialog_title_tips">温馨提醒</string>
    <string name="promotion">推广</string>
    <string name="later">稍后再说</string>
    <string name="all">全部</string>
    <string name="not_support">不支持</string>
    <string name="strong">强势</string>
    <string name="weak">弱势</string>
    <string name="portfolio_add_position">添加为持仓</string>
    <string name="portfolio_delete_position">删除持仓</string>
    <string name="confirm_del_stock">确定删除自选股?</string>
    <string name="portfolio_edit_confirm_delete_tips1">当前选择的股票将同时移出其他分组，确定删除自选吗？</string>
    <string name="portfolio_edit_confirm_delete_tips2">确定将当前选择的股票移出分组吗？</string>
    <string name="portfolio_edit_confirm_delete_tips3">同时删除自选，并移出其他分组</string>
    <string name="stock_stop">停牌</string>
    <string name="sub_new">次新</string>
    <string name="new_stock">新股</string>
    <string name="tap">龙头</string>
    <string name="all_a">全A</string>
    <string name="stock_detail_today_price_begin">今开</string>
    <string name="stock_detail_yesterday_price_end">昨收</string>
    <string name="stock_detail_price_highest">最高</string>
    <string name="stock_detail_price_lowest">最低</string>
    <string name="stock_detail_amount">成交额</string>
    <string name="stock_detail_turnover_rate">换手率</string>
    <string name="stock_detail_pe_ratio">市盈率</string>
    <string name="stock_detail_market_value">总市值</string>
    <string name="stock_detail_change">涨跌额</string>
    <string name="stock_detail_volume">成交量</string>
    <string name="stock_detail_amplitude">振幅</string>
    <string name="stock_detail_bill_ratio">委比</string>
    <string name="stock_detail_volume_ratio">量比</string>
    <string name="stock_detail_circulation_market_value">流通市值</string>
    <string name="stock_detail_outside">外盘</string>
    <string name="stock_detail_inside">内盘</string>
    <string name="stock_detail_limit_raising">涨停</string>
    <string name="stock_detail_limit_down">跌停</string>
    <string name="leading_stock">领涨股</string>
    <string name="name_code">名称代码</string>
    <string name="detail_amount">成交量</string>
    <string name="detail_rise_count">上涨家数</string>
    <string name="detail_fall_count">下跌家数</string>
    <string name="detail_postion">持仓</string>
    <string name="detail_daily_change">日增</string>
    <string name="memo_edit_hint">请输入备注内容</string>
    <string name="memo_edit_max_input_error_tips">备注内容不可超过500字</string>
    <string name="memo_edit_exit_dialog_message">请确定是否保存备注内容？</string>
    <string name="memo_edit_tips1">还可输入%d字</string>
    <string name="memo_edit_tips2">已经超出</string>
    <string name="hongkong_delay_prompt_msg">根据港交所规定，港股行情已延时15分钟</string>
    <string name="hongkong_delay_actionbar_tag">延时</string>
    <string name="usa_delay_prompt_msg">根据相关交易所的规定，美股行情已延时15分钟</string>
    <string name="usa_delay_actionbar_tag">延时</string>
    <string name="tab_one_day">分时</string>
    <string name="tab_five_day">五日</string>
    <string name="tab_daily_k">日K</string>
    <string name="tab_weekly_k">周K</string>
    <string name="tab_monthly_k">月K</string>
    <string name="tab_one_minute_k">1分</string>
    <string name="tab_five_minutes_k">5分</string>
    <string name="tab_fifteen_minutes_k">15分</string>
    <string name="tab_thirty_minutes_k">30分</string>
    <string name="tab_sixty_minutes_k">60分</string>
    <string name="tab_minutes_k">分钟</string>
    <string name="indicator_not_support_placeholder">暂不支持此类型</string>
    <string name="ma_rise">↑</string>
    <string name="ma_down">↓</string>
    <string name="stock_detail_buy">买</string>
    <string name="stock_detail_sell">卖</string>
    <string name="stock_detail_shake_guide_tips">摇一摇\n晓智来帮忙</string>
    <string name="tab_news">新闻</string>
    <string name="tab_notice">公告</string>
    <string name="tab_report">研报</string>
    <string name="tab_plate_news">关联资讯</string>
    <string name="stock_detail_page">个股画像-</string>
    <string name="tab_announcement_remind">大事提醒</string>
    <string name="capital_main_in">主力流入</string>
    <string name="capital_retail_in">散户流入</string>
    <string name="capital_retail_out">散户流出</string>
    <string name="capital_main_out">主力流出</string>
    <string name="capital_super">超大</string>
    <string name="capital_big">大单</string>
    <string name="capital_mid">中单</string>
    <string name="capital_small">小单</string>
    <string name="capital_duo">多</string>
    <string name="capital_kong">空</string>
    <string name="tab_capital">资金</string>
    <string name="tab_diagnosis">诊股</string>
    <string name="tab_interaction">互动</string>
    <string name="tab_finance">财务</string>
    <string name="tab_intro">简况</string>
    <string name="tab_consultant">牛人</string>
    <string name="tab_shareholder">股东</string>
    <string name="capital_real_time">实时成交资金流向(万元)</string>
    <string name="capital_net_in">净流入</string>
    <string name="capital_deta">最近5日主力增减仓</string>
    <string name="capital_margin_trading_balance">融资融券分析(亿元)</string>
    <string name="capital_margin_trading_balance_info">当日融资融券余额%1$s亿，行业排名%2$s，较前一交易日%3$s</string>
    <string name="capital_delta_detail">"今日资金净流入%1$.2f亿元，主力资金净流入%2$.2f亿元。五日净流入%3$.2f亿元，十日净流入%4$.2f亿元。主力流入资金行业排名列%5$d/%6$d。"</string>
    <string name="capital_today">今日资金</string>
    <string name="finance_achievement">业绩</string>
    <string name="finance_analysis">分析</string>
    <string name="incoming">营业收入</string>
    <string name="incoming_with_unit">营业收入%s</string>
    <string name="incoming_dollar">营业收入(美元)</string>
    <string name="net_profit">净利润</string>
    <string name="net_profit_with_unit">净利润%s</string>
    <string name="profit">利润</string>
    <string name="profit_dollar">利润(美元)</string>
    <string name="profitability">盈利水平</string>
    <string name="increasement">同比增长</string>
    <string name="seasons">1-4季度</string>
    <string name="rise_and_down_amplitude">个股涨跌幅</string>
    <string name="rise_and_down_limit">个股涨跌停板</string>
    <string name="intro_brief">简介</string>
    <string name="intro_shareholder">股东</string>
    <string name="whole_network_consultant">全网牛人建议</string>
    <string name="exclusive_consultant_opinion">独家牛人诊断</string>
    <string name="consultant_opinion_title">%s-诊断</string>
    <string name="consultant_page_view_count">阅读 %d</string>
    <string name="main_tab_name_portfolio">自选</string>
    <string name="main_tab_name_market">行情</string>
    <string name="main_tab_name_discover">选股</string>
    <string name="main_tab_name_information">资讯</string>
    <string name="main_tab_name_consultant">投顾</string>
    <string name="main_tab_name_setting">我的</string>
    <string name="yi">亿</string>
    <string name="wan">万</string>
    <string name="yuan">元</string>
    <string name="operation_live_message">直播</string>
    <string name="operation_share">立即分享</string>
    <string name="operation_chip">筹码</string>
    <string name="operation_figure">个股画像</string>
    <string name="operation_comment">互动评论</string>
    <string name="operation_stare">盯盘</string>
    <string name="operation_add">加自选</string>
    <string name="operation_add_group">加入分组</string>
    <string name="operation_kline_setting">K线设置</string>
    <string name="operation_remove">删自选</string>
    <string name="operation_similar_k">相似K线</string>
    <string name="operation_history">历史回看</string>
    <string name="operation_bullbear">牛熊转换</string>
    <string name="operation_memo">备注</string>
    <string name="operation_memo_add">添加备注</string>
    <string name="operation_memo_edit">编辑备注</string>
    <string name="photograph">拍照</string>
    <string name="record_video">录视频</string>
    <string name="album_picker">从相册选择</string>
    <string name="stock_list_head_new_price">最新价</string>
    <string name="subject_list_head_name">名称</string>
    <string name="market_capital_flow_net_inflow">主力净流入</string>
    <string name="market_h_shares">H股</string>
    <string name="market_a_shares">A股</string>
    <string name="market_ah_premium">溢价(H/A)</string>
    <string name="market_offer_price">要约价</string>
    <string name="market_current_progress">当前进度</string>
    <string name="delta">涨跌幅</string>
    <string name="tag_kline_repair">tag_kline_repair</string>
    <string name="tag_kline_unrepair">tag_kline_unrepair</string>
    <string name="tag_kline_volume">tag_kline_volume</string>
    <string name="tag_kline_macd">tag_kline_macd</string>
    <string name="tag_kline_kdj">tag_kline_kdj</string>
    <string name="tag_kline_rsi">tag_kline_rsi</string>
    <string name="tag_kline_boll">tag_kline_boll</string>
    <string name="tag_kline_capital_flow">tag_kline_capital_flow</string>
    <string name="tag_kline_bbi">tag_kline_bbi</string>
    <string name="tag_kline_dmi">tag_kline_dmi</string>
    <string name="tag_kline_cci">tag_kline_cci</string>
    <string name="tag_kline_ene">tag_kline_ene</string>
    <string name="tag_kline_dma">tag_kline_dma</string>
    <string name="tag_kline_expma">tag_kline_expma</string>
    <string name="tag_kline_vr">tag_kline_vr</string>
    <string name="tag_kline_obv">tag_kline_obv</string>
    <string name="tag_kline_bias">tag_kline_bias</string>
    <string name="tag_kline_wr">tag_kline_wr</string>
    <string name="tag_kline_break">tag_kline_break</string>
    <string name="repair">前复权</string>
    <string name="un_repair">不复权</string>
    <string name="index_type_amount">成交量</string>
    <string name="index_type_macd">MACD</string>
    <string name="index_type_kdj">KDJ</string>
    <string name="index_type_rsi">RSI</string>
    <string name="index_type_boll">BOLL</string>
    <string name="index_type_dmi">DMI</string>
    <string name="index_type_cci">CCI</string>
    <string name="index_type_ene">ENE</string>
    <string name="index_type_dma">DMA</string>
    <string name="index_type_expma">EXPMA</string>
    <string name="index_type_vr">VR</string>
    <string name="index_type_bbi">BBI</string>
    <string name="index_type_obv">OBV</string>
    <string name="index_type_bias">BIAS</string>
    <string name="index_type_capital_flow">主力资金</string>
    <string name="index_type_wr">WR</string>
    <string name="index_type_break">横盘突破</string>
    <string name="commodity_info">商品信息</string>
    <string name="order_amount">支付金额</string>
    <string name="order_detail">订单详情</string>
    <string name="refresh_order">刷新支付订单</string>
    <string name="exit_order">退出支付订单</string>
    <string name="order_finish_title">支付结果说明：</string>
    <string name="order_finish_unknown_info">提示：结果可能会有几分钟延迟，可稍后刷新支付结果</string>
    <string name="compare_stock">叠加</string>
</resources>